# databricks-asset-bundles-examples

./: .gitignore  .mcp.json  .ruff.toml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bundle-validate.yml  fmt.yml  validate.yml
contrib/data_engineering/: conftest.py
deployment/: deploy_genie_space.py
knowledge_base/alerts/: databricks.yml
knowledge_base/dashboard_nyc_taxi/: databricks.yml
knowledge_base/iceberg_catalog/: README.md  (+2 more)
scripts/: .yamllint.yml  README.md  bundle.yml  check_template_checksums.sh  discover_bundle_dirs.py  generate_ruff_notebook_excludes.py  local_bundle_validate.sh  template_checksums.sha256  update_from_templates.sh  validate_bundle_schema.py
scripts/knowledge_base/iceberg_catalog/: README.md  pyproject.toml
scripts/knowledge_base/iceberg_catalog/notebooks/: 01_create_connection.py  02_register_catalog.py  expire_iceberg_snapshots.py
scripts/knowledge_base/iceberg_catalog/resources/: iceberg_catalog.yml
scripts/knowledge_base/iceberg_catalog/snowflake/: 01_storage_integration.sql  02_external_volume.sql  03_open_catalog_setup.sql  04_iceberg_tables.sql
scripts/knowledge_base/iceberg_catalog/src/echostar_iceberg/: __init__.py  schema_sync.py  table_migration.py
scripts/knowledge_base/iceberg_catalog/src/iceberg_catalog/: __init__.py  cli.py  polaris_client.py  snowflake_refresh.py  table_migration.py
scripts/knowledge_base/iceberg_catalog/terraform/: outputs.tf  prod.tfvars  s3.tf
scripts/knowledge_base/iceberg_catalog/tests/: test_polaris_client.py  test_table_migration.py
(+305 files in other folders)
