[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "iceberg_catalog"
version     = "0.1.0"
description = "Shared Iceberg catalog layer — Snowflake Open Catalog ↔ Databricks Unity Catalog"
readme      = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Iceberg REST client auth + HTTP
    "requests>=2.31.0",
    # Snowflake driver (pure Python, no Pandas extras needed for CLI tasks)
    "snowflake-connector-python>=3.6.0",
    # Databricks SDK (WorkspaceClient, secrets, tables API)
    "databricks-sdk>=0.20.0",
    # S3 access for metadata location resolution
    "boto3>=1.34.0",
    # CLI
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "moto[s3]>=5.0",           # S3 mocking for table_migration tests
    "responses>=0.25",         # HTTP mocking for polaris_client tests
    "ruff>=0.3",
    "mypy>=1.9",
]

[project.scripts]
# These names map to python_wheel_task.entry_point in databricks.yml
scan_drift   = "iceberg_catalog.cli:scan_drift"
sync_catalog = "iceberg_catalog.cli:sync_catalog"

[tool.hatch.build.targets.wheel]
packages = ["src/iceberg_catalog"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version      = "3.10"
strict              = true
ignore_missing_imports = true
